@@ -22,6 +22,7 @@ import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
 import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.store.Directory;
 import org.apache.solr.cloud.RecoveryStrategy;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
@@ -29,6 +30,7 @@ import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.CoreDescriptor;
 import org.apache.solr.core.DirectoryFactory;
 import org.apache.solr.core.SolrCore;
+import org.apache.solr.util.IOUtils;
 import org.apache.solr.util.RefCounted;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -68,7 +70,6 @@ public final class DefaultSolrCoreState extends SolrCoreState implements Recover
         closer.closeWriter(indexWriter);
       } else if (indexWriter != null) {
         log.info("closing IndexWriter...");
-        indexWriter.close();
       }
       indexWriter = null;
     } catch (Exception e) {
@@ -159,21 +160,9 @@ public final class DefaultSolrCoreState extends SolrCoreState implements Recover
       try {
         if (indexWriter != null) {
           if (!rollback) {
-            try {
-              log.info("Closing old IndexWriter... core=" + coreName);
-              indexWriter.close();
-            } catch (Exception e) {
-              SolrException.log(log, "Error closing old IndexWriter. core="
-                  + coreName, e);
-            }
+            closeIndexWriter(coreName);
           } else {
-            try {
-              log.info("Rollback old IndexWriter... core=" + coreName);
-              indexWriter.rollback();
-            } catch (Exception e) {
-              SolrException.log(log, "Error rolling back old IndexWriter. core="
-                  + coreName, e);
-            }
+            rollbackIndexWriter(coreName);
           }
         }
         indexWriter = createMainIndexWriter(core, "DirectUpdateHandler2");
@@ -185,6 +174,41 @@ public final class DefaultSolrCoreState extends SolrCoreState implements Recover
         pauseWriter = false;
         writerPauseLock.notifyAll();
       }
+    }
+  }
+
+  private void closeIndexWriter(String coreName) {
+    try {
+      log.info("Closing old IndexWriter... core=" + coreName);
+      Directory dir = indexWriter.getDirectory();
+      try {
+        IOUtils.closeQuietly(indexWriter);
+      } finally {
+        if (IndexWriter.isLocked(dir)) {
+          IndexWriter.unlock(dir);
+        }
+      }
+    } catch (Exception e) {
+      SolrException.log(log, "Error closing old IndexWriter. core="
+          + coreName, e);
+    }
+  }
+
+  private void rollbackIndexWriter(String coreName) {
+    try {
+      log.info("Rollback old IndexWriter... core=" + coreName);
+      Directory dir = indexWriter.getDirectory();
+      try {
+        
+        indexWriter.rollback();
+      } finally {
+        if (IndexWriter.isLocked(dir)) {
+          IndexWriter.unlock(dir);
+        }
+      }
+    } catch (Exception e) {
+      SolrException.log(log, "Error rolling back old IndexWriter. core="
+          + coreName, e);
     }
   }
   
@@ -217,21 +241,9 @@ public final class DefaultSolrCoreState extends SolrCoreState implements Recover
       
       if (indexWriter != null) {
         if (!rollback) {
-          try {
-            log.info("Closing old IndexWriter... core=" + coreName);
-            indexWriter.close();
-          } catch (Exception e) {
-            SolrException.log(log, "Error closing old IndexWriter. core="
-                + coreName, e);
-          }
+          closeIndexWriter(coreName);
         } else {
-          try {
-            log.info("Rollback old IndexWriter... core=" + coreName);
-            indexWriter.rollback();
-          } catch (Exception e) {
-            SolrException.log(log, "Error rolling back old IndexWriter. core="
-                + coreName, e);
-          }
+          rollbackIndexWriter(coreName);
         }
       }
       
